--- a/src/main/resources/templates/editors/index.html
+++ b/src/main/resources/templates/editors/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'editors')}">
 <head>
     <meta charset="UTF-8">
     <title>Editor Index</title>
 </head>
 <body>
-<h1 th:text="'List of Editors ... '">Editor Index Page</h1>
+<h2 th:text="'List of Editors'">Editor Index Page</h2>
 
-<table>
+<table class="table table-striped">
     <thead>
     <tr>
         <th>Id</th>
