fixed broken links

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,9 +7,13 @@
 <body>
 <h2 th:text="#{welcome}">Welcome</h2>
 
+<br>
+
 <div class="row">
     <div class="col-md-12">
-        <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
+        <img class="img-responsive" src="../static/resources/images/libros.jpg"
+             th:src="@{/resources/images/libros.jpg}"/>
+
     </div>
 </div>
 
