--- a/src/main/resources/templates/authors/authorDetails.html
+++ b/src/main/resources/templates/authors/authorDetails.html
@@ -47,14 +47,7 @@
         <td valign="top">
             <dl class="dl-horizontal">
                 <dt>Name</dt>
-                <dd th:text="${book.name}"/>
-                </dd>
-                <!--
-                <dt>Birth Date</dt>
-                <dd
-                        th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}"/>
-                </dd>
-                -->
+                <dd th:text="${book.name}"></dd>
                 <dt>Type</dt>
                 <!--QUE ÉXITO!!!!!! -->
                 <dd th:text="${book.bookType.name}"/>
