--- a/src/main/resources/templates/editors/index.html
+++ b/src/main/resources/templates/editors/index.html
@@ -5,25 +5,23 @@
     <title>Editor Index</title>
 </head>
 <body>
-<h2 th:text="'List of Editors'">Editor Index Page</h2>
+<h2 th:text="'Editors'">Editor Index Page</h2>
 
-<table class="table table-striped">
+<table id="vets" class="table table-striped">
     <thead>
     <tr>
-        <th>Id</th>
-        <th>First Name</th>
-        <th>Last Name</th>
+        <th>Name</th>
+        <th>Editorials</th>
     </tr>
     </thead>
-
     <tbody>
     <tr th:each="editor : ${editors}">
-        <td th:text="${editor.id}">Vacío</td>
-        <td th:text="${editor.firstName}">Vacío</td>
-        <td th:text="${editor.lastName}">Vacío</td>
+        <td th:text="${editor.firstName + ' ' + editor.lastName}"></td>
+        <td><span th:each="editorial : ${editor.editorials}"
+                  th:text="${editorial.description + ' '}"/> <span
+                th:if="${editor?.editorials?.size() == 0}">none</span></td>
     </tr>
     </tbody>
-
 </table>
 
 </body>
